Commit current development state

--- a/dashboard_config.json
+++ b/dashboard_config.json
@@ -34,6 +34,13 @@
       "row": 0,
       "col": 4,
       "filter_id": "aaa7dddd-b9fb-44fc-a81c-c93e42625b59"
+    },
+    {
+      "title": "10-319/Meyerseals",
+      "color": "#3b82f6",
+      "row": 1,
+      "col": 0,
+      "filter_id": "2e659422-c8f3-4dda-9c1e-79f643f096c3"
     }
   ],
   "locked": true
