feat: implement ExchangeService for metadata portability and finalize Cockpit UI

--- a/resources/reports/project_comparison.json
+++ b/resources/reports/project_comparison.json
@@ -1,26 +1,30 @@
 {
-    "id": "project_comparison",
-    "name": "Project Comparison",
-    "description": "Comparison of spending by project tags.",
-    "group_by": "tags",
-    "aggregations": [
-        {
-            "field": "amount",
-            "op": "sum"
-        }
-    ],
-    "visualizations": [
-        "bar_chart",
-        "pie_chart"
-    ],
-    "filter_query": {
-        "operator": "AND",
-        "conditions": [
-            {
-                "field": "tags",
-                "op": "contains",
-                "value": "Project"
-            }
-        ]
+  "id": "project_comparison",
+  "name": "Project Comparison",
+  "description": "Comparison of spending by project tags.",
+  "filter_query": {
+    "operator": "AND",
+    "conditions": [
+      {
+        "field": "tags",
+        "op": "contains",
+        "value": "Project"
+      }
+    ]
+  },
+  "group_by": "tags",
+  "aggregations": [
+    {
+      "field": "amount",
+      "op": "sum"
     }
+  ],
+  "visualizations": [],
+  "components": [
+    {
+      "type": "pie_chart",
+      "content": null,
+      "settings": {}
+    }
+  ]
 }
